Add support for themed search assist.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -144,14 +144,53 @@
     --quotes-carousel-bg-color:  !important;
     --quotes-carousel-outline-hover-color:  !important;
 
-    /* This is used for the --theme-assist-button-text-gradient. */
+    /// THEME ASSIST BUTTON
+    // Button text gradient
     --sds-color-palette-blue-10: @blue !important;
     --sds-color-palette-purple-10: @mauve !important;
     --sds-color-palette-red-10: @peach !important;
 
+    // Button border gradient
+    --sds-color-palette-blue-70: darken(@blue, 5%) !important;
+    --sds-color-palette-purple-50: darken(@mauve, 5%) !important;
+    --sds-color-palette-red-70: darken(@peach, 5%) !important;
+
+    // Accented button hover state: "More", "Stop"
+    --sds-color-palette-gray-80: fade(@accent, 30%) !important;
+    --sds-color-palette-gray-60: @accent !important;
+
+    --theme-assist-tab-background: linear-gradient(
+      135deg,
+      fade(@blue, 15%) 0%,
+      fade(@mauve, 8%) 50%,
+      fade(@peach, 12%) 100%
+    ) !important;
+
+    --theme-assist-bg-chat-system: @mantle !important;
+    // --theme-assist-button-border-color
+    --sds-color-palette-blue-tint-15: darken(@blue, 5%) !important;
+    --theme-assist-bg-opt-in: @mantle !important;
+    --sds-color-palette-blue-tint-15: @blue; // --theme-assist-bg-opt-in-border
+    --theme-assist-gradient-stop: @accent !important;
+    // --theme-assist-btn-bg
+    --sds-color-palette-tint-09: red !important;
+    // --theme-assist-bg-icon
+    --sds-color-palette-shade-36: blue !important;
+    // --theme-assist-txt-link
+    --sds-color-text-accent-01: @blue !important;
+    // --theme-assist-error-bg
+    --sds-color-palette-tint-03: fade(@red, 30%) !important;
+    // --theme-assist-error-border
+    --sds-color-palette-tint-06: @red !important;
+
+    --theme-assist-button-background: @surface0;
+    --theme-assist-button-selected-background: @surface2 !important;
+
     --sds-color-primary: @text !important;
     --sds-color-secondary: @subtext0 !important;
     --sds-color-background: @base !important;
+    // theme assist tooltip subtext
+    --sds-color-palette-tint-72: @subtext0 !important;
 
     --sds-color-background-01: @base !important;
     --sds-color-background-02: @mantle !important;
@@ -174,6 +213,9 @@
       !important;
 
     --sds-color-text-accent-01: @text !important;
+    --sds-color-text-accent-01-state-01: @subtext1 !important;
+    --sds-color-text-accent-01-state-02: @subtext0 !important;
+
     --sds-color-text-accent-01-alt: @accent !important;
     --sds-color-text-accent-01-alt-state-01: darken(@accent, 5%) !important;
     --sds-color-text-accent-01-alt-state-02: darken(@accent, 10%) !important;
