Add a fix for footer bg as well, while we're at it.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -47,7 +47,8 @@
     --color-nav-hover-bg: darken(@accent, 5%);
     --color-secondary-nav-bg: @surface0;
     --color-link: @blue;
-    --color-footer-text: @text;
+    --color-footer: @mantle;
+    --color-footer-text: @subtext0;
 
     .ui.secondary.menu .dropdown.item:hover,
     .ui.secondary.menu a.item:hover,
