feat(ixl): theme majority of main page

--- a/styles/ixl/catppuccin.user.less
+++ b/styles/ixl/catppuccin.user.less
@@ -37,5 +37,247 @@
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
+
+    body {
+      background-color: @base;
+    }
+
+    .site-nav-header {
+      background-color: @base;
+    }
+
+    .home-grades-list-section, .offerings-banner-group {
+      background-color: @base;
+    }
+
+    .grade-module {
+      background-color: @mantle;
+      border-color: @subtext1;
+    }
+
+    .grade-description, .subject-hdr {
+      color: @text;
+    }
+
+    .footer-blurb-text, .footer-submenu-lk, .footer-questions-answered, .family-brands__description {
+      color: @text;
+    }
+
+    .list-subject-links {
+      border-top-color: @subtext1;
+    }
+
+    .grade-body .video-lk::before {
+      color: @subtext1;
+    }
+
+    .skill-lk, .grade-body .video-lk {
+      color: @blue;
+    }
+
+    .footer-submenu-header {
+      color: @blue;
+    }
+
+    .family-brands__spacer::after {
+      background: @subtext1;
+    }
+
+    .footer-questions-answered {
+      border-top-color: @subtext1;
+    }
+
+    .footer-copyright, .footer-copyright a {
+      color: @subtext1;
+    }
+
+    .grade-box-tab {
+      color: @base;
+    }
+
+    .blue1-bg {
+        background-color: @teal;
+    }
+
+    .orange1-bg {
+      background-color: @peach;
+    }
+
+    .green1-bg {
+      background-color: @green;
+    }
+
+    .red1-bg {
+      background-color: @maroon;
+    }
+
+    .blue2-bg {
+      background-color: @sky;
+    }
+
+    .purple1-bg {
+      background-color: @mauve;
+    }
+
+    .green2-bg {
+      background-color: lighten(@green, 10%);
+    }
+
+    .orange2-bg {
+      background-color: darken(@peach, 10%);
+    }
+
+    .green3-bg {
+      background-color: darken(@green, 10%);
+    }
+
+    .orange3-bg {
+      background-color: @yellow;
+    }
+
+    .purple2-bg {
+      background-color: darken(@mauve, 10%);
+    }
+
+    .red2-bg {
+      background-color: @red;
+    }
+
+    .blue3-bg {
+      background-color: @blue;
+    }
+
+    .green4-bg {
+      background-color: @sapphire;
+    }
+
+    .orange5-bg {
+      background-color: @peach;
+    }
+
+    .blue1-bdr {
+      border-color: @teal;
+    }
+
+    .orange1-bdr {
+      border-color: @peach;
+    }
+
+    .green1-bdr {
+      border-color: @green;
+    }
+
+    .red1-bdr {
+      border-color: @maroon;
+    }
+
+    .blue2-bdr {
+      border-color: @sky;
+    }
+
+    .purple1-bdr {
+      border-color: @mauve;
+    }
+
+    .green2-bdr {
+      border-color: lighten(@green, 10%);
+    }
+
+    .orange2-bdr {
+      border-color: darken(@peach, 10%);
+    }
+
+    .green3-bdr {
+      border-color: darken(@green, 10%);
+    }
+
+    .orange3-bdr {
+      border-color: @yellow;
+    }
+
+    .purple2-bdr {
+      border-color: darken(@mauve, 10%);
+    }
+
+    .red2-bdr {
+      border-color: @red;
+    }
+
+    .blue3-bdr {
+      border-color: @blue;
+    }
+
+    .green4-bdr {
+      border-color: @sapphire;
+    }
+
+    .orange5-bdr {
+      border-color: @peach;
+    }
+
+    .blue1-text {
+        color: @teal;
+    }
+
+    .orange1-text {
+      color: @peach;
+    }
+
+    .green1-text {
+      color: @green;
+    }
+
+    .red1-text {
+      color: @maroon;
+    }
+
+    .blue2-text {
+      color: @sky;
+    }
+
+    .purple1-text {
+      color: @mauve;
+    }
+
+    .green2-text {
+      color: lighten(@green, 10%);
+    }
+
+    .orange2-text {
+      color: darken(@peach, 10%);
+    }
+
+    .green3-text {
+      color: darken(@green, 10%);
+    }
+
+    .orange3-text {
+      color: @yellow;
+    }
+
+    .purple2-text {
+      color: darken(@mauve, 10%);
+    }
+
+    .red2-text {
+      color: @red;
+    }
+
+    .blue3-text {
+      color: @blue;
+    }
+
+    .green4-text {
+      color: @sapphire;
+    }
+
+    .orange5-text {
+      color: @peach;
+    }
+
+    img[class*="arrow-icon"] {
+      @svg: escape('<svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.793.945a.48.48 0 0 1 .682 0l3.214 3.214a.48.48 0 0 1 0 .682L3.475 8.055a.482.482 0 1 1-.682-.682L5.666 4.5 2.793 1.627a.48.48 0 0 1 0-.682" fill="@{blue}"/></svg>');
+      content: url("data:image/svg+xml,@{svg}");
+    }
   }
 }
