feat: partially theme practice page

--- a/styles/ixl/catppuccin.user.less
+++ b/styles/ixl/catppuccin.user.less
@@ -279,5 +279,63 @@
       @svg: escape('<svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.793.945a.48.48 0 0 1 .682 0l3.214 3.214a.48.48 0 0 1 0 .682L3.475 8.055a.482.482 0 1 1-.682-.682L5.666 4.5 2.793 1.627a.48.48 0 0 1 0-.682" fill="@{blue}"/></svg>');
       content: url("data:image/svg+xml,@{svg}");
     }
+
+    /* Practice Page */
+
+    #practice-page-container .practice-page .focused-practice-area {
+      background-color: @base;
+    }
+
+    .crisp-button {
+      background-color: @green;
+      color: @base;
+    }
+
+    .SelectableTile.selected {
+      background-color: rgba(#lib.rgbify(@blue) [], 25%) !important;
+      border-color: @blue !important;
+    }
+
+    .SelectableTile.natural {
+      background-color: @base;
+      border-color: @sky;
+    }
+
+    .SelectableTile.hover {
+      background-color: rgba(#lib.rgbify(@blue) [], 15%) !important;
+      border-color: @sapphire;
+    }
+
+    .statistic-container {
+      background-color: @mantle;
+    }
+
+    .statistic-container .statistic-header {
+      color: @base;
+    }
+
+    .statistic-container.problems-attempted .statistic-content {
+      color: @text;
+    }
+
+    .statistic-container.problems-attempted .statistic-header {
+      background-color: @green;
+    }
+
+    .statistic-container.time-elapsed .statistic-header {
+      background-color: @blue;
+    }
+
+    .statistic-container.challenge .statistic-header, .statistic-container.smartscore .statistic-header {
+      background-color: @red;
+    }
+
+    .statistic-container.challenge .break-link, .statistic-container.smartscore .break-link {
+      background-color: @base;
+    }
+
+    .statistic-container.challenge .break-link a, .statistic-container.smartscore .break-link a  {
+      color: @blue;
+    }
   }
 }
