filter by attribute sel. let's replace the other one as well.
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -77,7 +77,7 @@
     #navbar-logo img {
       #codeberg-logo(@crust);
     }
-    :not(.powered-by > a) > .branding img {
+    .branding img[src^="https://design.codeberg.org/logo-kit/"] {
       #codeberg-logo(@text);
     }
 
