Set divider colours.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -115,6 +115,11 @@
     --ddg-browser-color-window-toolbar-bg-mobile:  !important;
 
     --divider-bg: @overlay1 !important;
+    --theme-divider-dropdown: 1px solid var(--divider-bg) !important;
+    // search assist divider
+    --sds-color-border-01: @overlay1 !important;
+    --theme-social-stat-divider: @overlay1 !important;
+    --theme-customize-button-divider: @overlay1 !important;
 
     .frm__hr {
       border-color: @overlay1 !important;
@@ -252,7 +257,6 @@
       background-color: fade(@accent, 30%) !important;
     }
 
-    --sds-color-border-01: @overlay0 !important;
     --sds-color-border-accent-01: @accent !important;
     --sds-color-palette-gray-40: @text !important; // Text
     --sds-color-palette-gray-50: @overlay0 !important; // Switch Toggle
@@ -261,8 +265,8 @@
     --sds-color-palette-green-50: @green !important;
     --sds-color-palette-green-60: @green !important;
     --sds-color-palette-green-70: @green !important; // "Protected"
+    // "Protected" checkmark
     .XzgiQhR6DcqPkNRYyhnH {
-      // "Protected" checkmark
       filter: @base-filter !important;
     }
     --sds-color-palette-red-40: @red !important;
@@ -280,6 +284,11 @@
     --sds-color-text-on-color: @base !important;
     --sds-color-text-on-dark-01: @text !important;
     --sds-color-text-success: @green !important;
+
+    // Results Entries - URL Subtext
+    a[data-testid="result-extras-url-link"] span {
+      color: @subtext0 !important;
+    }
 
     #more-results {
       &:hover {
@@ -639,7 +648,6 @@
     --theme-comparison-table-icon-bg-color:  !important;
     --theme-comparison-table-seperator-color:  !important;
     --theme-copyright-bg:  !important;
-    --theme-customize-button-divider:  !important;
     --theme-dc-color-anchor-sleep: @subtext0 !important;
     --theme-dc-color-background-dark: @base !important;
     --theme-dc-color-claude-bg: @green !important;
@@ -765,7 +773,6 @@
     --theme-sidemenu-shadow: -1px 0 1px fade(@surface0, 30%) !important;
     --theme-sidemenu-text: @blue !important; // These are links!
     --theme-sidemenu-title: @subtext0 !important;
-    --theme-social-stat-divider:  !important;
     --theme-spinner-bg:  !important;
     --theme-spinner-bg--disabled: @mantle !important;
     --theme-spinner-bg--inverted:  !important;
