Push some importance changes.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/codeberg/catppuccin.user.less
+++ b/styles/codeberg/catppuccin.user.less
@@ -86,7 +86,6 @@
 
     // NAVBAR
     #navbar {
-      // We have to overwrite it due to it breaking
       background-color: var(--color-nav-bg) !important;
 
       > .menu, > .menu .menu {
@@ -143,7 +142,7 @@
 
     // Otherwise we've got @blue on @green, which is impossible to see :]
     .repository .ui.attached.isSigned.isVerified.bottom a strong {
-      color: @crust !important;
+      color: @crust;
     }
 
     footer {
@@ -159,12 +158,12 @@
       .language.button {
         &.active {
           color: @base;
-          background-color: @accent !important;
+          background-color: @accent;
         }
 
         &:hover {
           color: @base;
-          background-color: darken(@accent, 5%) !important;
+          background-color: darken(@accent, 5%);
         }
 
         &:active, &:focus {
@@ -268,3 +267,5 @@
     }
   }
 }
+
+@-moz-document domain("donate.codeberg.org") {}
