Fix links for visited etc.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -22,26 +22,24 @@
 #mixins {
   .a() {
     a,
-    a.permalink {
-      &:link,
-      &:enabled {
-        color: @blue !important;
+    a.permalink,
+    :is(a, a.permalink):link {
+      color: @blue !important;
 
-        &:hover {
-          color: @sky !important;
-        }
+      &:hover {
+        color: @sky !important;
+      }
 
-        &:active, &:focus, &:focus-within {
-          color: @sapphire !important;
-        }
+      &:active, &:focus, &:focus-within {
+        color: @sapphire !important;
+      }
 
-        &:visited {
-          color: @lavender !important;
-        }
+      &:visited {
+        color: @lavender !important;
+      }
 
-        &.active {
-          background-color: @surface0 !important;
-        }
+      &.active {
+        background-color: @surface0 !important;
       }
     }
 
