set default postsig colour.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -1667,8 +1667,16 @@
             }
           }
 
-          .postsignature hr {
-            background-color: @overlay1 !important;
+          .postsignature {
+            // define default signature colour as subtle.
+            // DON'T OVERWRITE SPECIFIC STYLES.
+            * {
+              color: @subtext0;
+            }
+
+            hr {
+              background-color: @overlay1 !important;
+            }
           }
         }
 
