--- a/styles/discourse/catppuccin.user.less
+++ b/styles/discourse/catppuccin.user.less
@@ -19,7 +19,7 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
 // deno-fmt-ignore
-@-moz-document url-prefix("https://discourse."), domain("discourse.org"), url-prefix("https://devforum.roblox.com") {
+@-moz-document url-prefix("https://discourse."), domain("discourse.org"), url-prefix("https://devforum.roblox.com"), domain("community.getmailspring.com") {
   @import url("https://unpkg.com/@catppuccin/highlightjs@1.0.0/css/catppuccin-variables.important.css");
 
   @media (prefers-color-scheme: light) {
