Marketing, press materials icon.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -141,9 +141,13 @@
     --legacy-theme-atb-shadow: 0 -2px 3px fade(@base, 6%) !important;
     --legacy-theme-atb-subtitle:  !important;
     --legacy-theme-atb-text:  !important;
-    --marketing-cpt-alt-row-color:  !important;
-    --marketing-cpt-border-color:  !important;
-    --marketing-cpt-ddg-cell-color:  !important;
+
+    .marketing-compare-privacy-table_root__lYD64 {
+      --marketing-cpt-alt-row-color: fade(@overlay2, 10%) !important;
+      --marketing-cpt-border-color: @overlay0 !important;
+      --marketing-cpt-ddg-cell-color: fade(@overlay2, 20%) !important;
+    }
+
     --modal-background: @surface0 !important;
     --overlay-background: @base !important;
     --quotes-carousel-bg-color:  !important;
@@ -965,6 +969,90 @@
 
     .app-hero-card-buttons_chevron__eqwRE {
       filter: @text-filter !important;
+    }
+
+    // DDG AI UPGRADE ICON
+    .ePgzldTqLJvBwANY52Gk svg {
+      path {
+        &[fill="#fff"],
+        &[fill="#E2A412"] {
+          fill: @surface1 !important;
+        }
+
+        &[fill="#FC3"] {
+          fill: @peach !important;
+        }
+
+        &[fill="#FFE8A3"] {
+          fill: @yellow !important;
+        }
+      }
+
+      // deno-fmt-ignore
+      defs linearGradient {
+        &:nth-child(1) stop {
+          &:nth-child(1) {
+            stop-color: @mauve !important;
+          }
+
+          &:nth-child(2) {
+            stop-color: @blue !important;
+          }
+        }
+
+        &:nth-child(2) stop {
+          &:nth-child(1) {
+            stop-color: @mauve !important;
+          }
+
+          &:nth-child(2) {
+            stop-color: @lavender !important;
+          }
+
+          &:nth-child(3) {
+            stop-color: @blue !important;
+          }
+        }
+      }
+    }
+
+    // PRESS MATERIALS ICONS
+    .content_root___2bzn.press_cards__rLmER article path {
+      &[stroke="#aaa"] {
+        stroke: @text !important;
+      }
+
+      &[fill="#aaa"] {
+        fill: @text !important;
+      }
+
+      &[fill="#fff"] {
+        fill: @base !important;
+      }
+
+      &[fill="#de5833"] {
+        fill: @accent !important;
+      }
+
+      &[fill="#8fabf9"] {
+        fill: lighten(@blue, 10%) !important;
+      }
+
+      &[fill="#3969ef"] {
+        fill: darken(@blue, 30%) !important;
+      }
+
+      &[fill="#2b55ca"] {
+        fill: @blue !important;
+      }
+
+      &[fill="#fc3"] {
+        fill: @yellow !important;
+      }
+
+      &[fill="#e2a412"] {
+        fill: darken(@yellow, 10%) !important;
+      }
     }
 
     .HXxL5G2PnppEZeApKKPq svg path,
