--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -1016,6 +1016,41 @@
       }
     }
 
+    // PRESS ICONS - "TRUSTED FOR OVER A DECADE"
+    .statCard_statCardCollection__14uOr
+      .card_card___ZlNq.card_elevation50__eBO8I.card_radiusMd__MCoYi.statCard_statCard__JHVMT {
+      &:nth-child(1) img {
+        @svg: escape(
+          '<svg viewBox="0 0 73 66" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10.93 56.493C16.13 47.807 25.566 42 36.35 42c10.764 0 20.187 5.788 25.393 14.45.847-3.321 1.552-7.001 1.904-10.45h3.331c.798 7.71 3.41 16.575 5.371 20h-72c1.961-3.425 4.512-12.29 5.299-20h3.331c.358 3.464 1.083 7.16 1.95 10.493M12.606 62H60.08z" fill="@{text}" fill-opacity=".3"/><path fill-rule="evenodd" clip-rule="evenodd" d="M39.35 50h-6c-1 6.095-5.735 13.733-10 16h26c-4.265-2.267-9.001-9.905-10-16m28.818-20c.468 1.425.853 2.848 1.046 4.646.202 1.868.16 3.58-.003 5.079L72.35 46h-14l3.138-6.277a23.6 23.6 0 0 1-.003-5.078c.194-1.798.58-3.22 1.046-4.646.871-2.65 2.035-4.822 2.82-6 .783 1.178 1.946 3.35 2.817 6m-58 .001c.468 1.425.853 2.848 1.046 4.646.202 1.868.16 3.58-.003 5.079L14.35 46h-14l3.138-6.277c-.162-1.5-.204-3.21-.003-5.078.194-1.798.58-3.22 1.046-4.646.871-2.65 2.035-4.822 2.82-6 .783 1.178 1.946 3.35 2.817 6" fill="@{text}" fill-opacity=".6"/><path fill-rule="evenodd" clip-rule="evenodd" d="M36.349 42c5.037 0 9.77 1.28 13.927 3.517C49.219 37.863 43.4 32 36.349 32s-12.87 5.863-13.927 13.517A29.3 29.3 0 0 1 36.349 42" fill="@{peach}"/><path fill-rule="evenodd" clip-rule="evenodd" d="M46.012 22a41.5 41.5 0 0 0-2.617-10c-2.177-5.477-5.084-9.565-7.045-12-1.961 2.435-4.868 6.523-7.045 12a41.5 41.5 0 0 0-2.617 10c-.897 6.888.137 12.743 1.376 16.926.57 1.924 2.594 3.674 4.286 5.074h8c1.691-1.4 3.716-3.15 4.286-5.074 1.239-4.183 2.272-10.038 1.376-16.926" fill="url(#a)"/><path fill-rule="evenodd" clip-rule="evenodd" d="M37.35 20a3 3 0 1 0-6 0 3 3 0 0 0 6 0" fill="@{base}"/><path fill-rule="evenodd" clip-rule="evenodd" d="M42.01 42.554a29.4 29.4 0 0 1 8.267 2.963c-.537-3.89-2.31-7.313-4.844-9.743A40.6 40.6 0 0 0 46.012 22a41.5 41.5 0 0 0-2.617-10C41.218 6.524 38.31 2.435 36.35 0a49 49 0 0 0-2.315 3.131c1.579 2.32 3.376 5.291 4.798 8.87 1.17 2.945 2.202 6.284 2.686 10 .896 6.887-.137 12.742-1.376 16.925-.57 1.924-1.764 3.674-3.455 5.074H32.35l-2 2v4h12v-4l-2-2c.54-.447 1.11-.933 1.66-1.446" fill="@{peach}"/><defs><linearGradient id="a" x1="36.35" y1="0" x2="36.35" y2="44" gradientUnits="userSpaceOnUse"><stop stop-color="@{peach}"/><stop offset="1" stop-color="@{yellow}"/></linearGradient></defs></svg>'
+        );
+        content: url("data:image/svg+xml, @{svg}") !important;
+      }
+
+      &:nth-child(2) img {
+        @light-blue: lighten(@blue, 10%);
+        @svg: escape(
+          '<svg fill="none" height="60" viewBox="0 0 89 60" width="88" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill-rule="evenodd"><path d="M34 4a4 4 0 0 0-4-4H4a4 4 0 0 0-4 4v2.019h34z" fill="@{text}" fill-opacity=".6"/><path d="M0 6.019V22a4 4 0 0 0 4 4h26a4 4 0 0 0 4-4V6.019z" fill="@{text}" fill-opacity=".3"/><path d="M12.5 55.5V16c0-.827.673-1.5 1.5-1.5h56c.827 0 1.5.673 1.5 1.5v39.5z" fill="@{base}"/><path d="M70 12H14a4 4 0 0 0-4 4v42h64V16a4 4 0 0 0-4-4M15 53h54V17H15z" fill="@{blue}"/><path d="M4 56h76v-6H4z" fill="@{light-blue}"/><path d="M74.343 60H9.657a4 4 0 0 1-2.829-1.171L4 56h76l-2.828 2.829A4 4 0 0 1 74.343 60" fill="@{blue}"/><path d="M30 43.802a13.84 13.84 0 0 1-8-12.592v-3.572a6.03 6.03 0 0 0 3.657-3.657h8.686A6.03 6.03 0 0 0 38 27.638v3.572a13.84 13.84 0 0 1-8 12.592" fill="@{light-blue}"/><path d="M36 21.981H24a4 4 0 0 1-4 4v5.229c0 6.505 3.96 12.355 10 14.771 6.04-2.416 10-8.266 10-14.771v-5.229a4 4 0 0 1-4-4m-2.927 4A8.06 8.06 0 0 0 36 28.907v2.303c0 4.342-2.309 8.245-6 10.342-3.691-2.097-6-6-6-10.342v-2.303a8.06 8.06 0 0 0 2.927-2.926H30z" fill="@{blue}"/><path d="M67 25.981H45a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h22a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1m0 8H45a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h22a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1m-12 8H45a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1" fill="@{subtext0}"/><path d="M84 41.981H66a4 4 0 0 1-4-4v-28A3.984 3.984 0 0 1 66 6h18c2.209 0 4 1.772 4 3.981v28a4 4 0 0 1-4 4" fill="@{blue}"/><path d="M66 35.981c-1.104 0-2-.897-2-2V6c0-1.103.896-2 2-2h18c1.104 0 2 .897 2 2v27.981c0 1.103-.896 2-2 2z" fill="@{base}"/><path d="M68 4v2l.895 1.789A4 4 0 0 0 72.472 10h5.056c1.515 0 2.9-.856 3.577-2.211L82 6V4z" fill="@{blue}"/><path d="M84 2H66a4 4 0 0 0-4 4v27.981a4 4 0 0 0 4 4h18a4 4 0 0 0 4-4V6a4 4 0 0 0-4-4M66 34h18V6H66z" fill="@{light-blue}"/><path d="M79 18h-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1m0 8h-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1" fill="@{subtext0}"/></g></svg>'
+        );
+        content: url("data:image/svg+xml, @{svg}") !important;
+      }
+
+      &:nth-child(3) img {
+        @svg: escape(
+          '<svg viewBox="0 0 52 33" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="m41.68.2-3.92 3.92v1.778l-4.479 4.478 1.584 1.584 4.48-4.48h1.774l3.92-3.92h-3.36z" fill="@{text}"/><path fill-rule="evenodd" clip-rule="evenodd" d="M34.008 6.416c-3.36-.392-6.384 1.176-8.008 3.696-1.624-2.52-4.648-4.088-8.008-3.696-3.64.448-6.608 3.304-7.056 6.888 0 .168-.056.392-.056.56-.112 2.184.84 4.256 2.408 5.824L26 32.12l12.712-12.432c1.568-1.568 2.52-3.64 2.408-5.824 0-.168-.056-.392-.056-.56-.448-3.528-3.416-6.44-7.056-6.888" fill="@{red}"/><path fill-rule="evenodd" clip-rule="evenodd" d="M41.065 13.304c-.448-3.584-3.416-6.44-7.056-6.888-1.233-.168-2.465 0-3.585.336 2.968.952 5.209 3.472 5.6 6.552 0 .168.056.392.056.56.113 2.184-.84 4.256-2.407 5.824L23.48 29.656 26 32.12l12.712-12.432c1.569-1.568 2.52-3.64 2.408-5.824 0-.168-.055-.392-.055-.56" fill="@{maroon}"/><path fill-rule="evenodd" clip-rule="evenodd" d="m18.383 28.424 1.456 1.456-6.72 2.24 2.24-6.72 1.456 1.456 5.6-5.6a1.083 1.083 0 0 1 1.568 0c.448.448.448 1.12 0 1.568zM2.928 10.896a.84.84 0 0 1 1.176-.168l2.24 1.68a.84.84 0 0 1-1.008 1.344l-2.24-1.68a.84.84 0 0 1-.168-1.176m45.976 1.176a.84.84 0 0 0-1.008-1.344l-2.24 1.68a.84.84 0 1 0 1.008 1.344zM47.279 17a.84.84 0 1 0 0 1.68h3.36a.84.84 0 1 0 0-1.68zM1.36 17a.84.84 0 1 0 0 1.68h3.36a.84.84 0 0 0 0-1.68zm44.129 5.376a.84.84 0 0 1 1.176-.168l2.24 1.68a.84.84 0 0 1-1.008 1.344l-2.24-1.68a.84.84 0 0 1-.168-1.176M6.344 23.552a.84.84 0 1 0-1.008-1.344l-2.24 1.68a.84.84 0 0 0 1.008 1.344z" fill="@{text}"/></svg>'
+        );
+        content: url("data:image/svg+xml, @{svg}") !important;
+      }
+
+      &:nth-child(4) img {
+        @dark-blue: darken(@blue, 10%);
+        @darker-blue: darken(@blue, 20%);
+        @svg: escape(
+          '<svg fill="none" height="80" viewBox="10 18 80 51.2" width="100" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill-rule="evenodd"><g fill="@{text}"><path d="M60 39a3 3 0 0 0 3 3h-1v28a4 4 0 0 0 4 4h18a4 4 0 0 0 4-4V42h-1a3 3 0 1 0 0-6H63a3 3 0 0 0-3 3m-20 4a3 3 0 0 1-3 3h1v24a4 4 0 0 1-4 4H16a4 4 0 0 1-4-4V46h1a3 3 0 1 1 0-6h24a3 3 0 0 1 3 3" opacity=".3"/><path d="M81.35 10.83a1.5 1.5 0 0 1-.672 2.012l-6.008 3a1.5 1.5 0 1 1-1.34-2.684l6.008-3a1.5 1.5 0 0 1 2.012.672M75.504 23a1.5 1.5 0 0 1 1.5-1.5h7.009a1.5 1.5 0 0 1 0 3h-7.01a1.5 1.5 0 0 1-1.5-1.5M19.65 10.83a1.5 1.5 0 0 1 2.013-.672l6.007 3a1.5 1.5 0 1 1-1.34 2.684l-6.008-3a1.5 1.5 0 0 1-.671-2.012M15.486 23a1.5 1.5 0 0 1 1.5-1.5h7.01a1.5 1.5 0 1 1 0 3h-7.01a1.5 1.5 0 0 1-1.5-1.5" opacity=".6"/></g><path d="M77 40H23a3 3 0 0 1-3-3v-2a3 3 0 0 1 3-3h54a3 3 0 0 1 3 3v2a3 3 0 0 1-3 3m-5 34H28a4 4 0 0 1-4-4V40h52v30a4 4 0 0 1-4 4" fill="@{blue}"/><path d="M24 46h52v-6H24z" fill="@{dark-blue}"/><path d="M60 28h-4v-4c0-2.206 1.795-4 4-4s4 1.794 4 4-1.794 4-4 4m-16 0h-4c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4zm16-12a8 8 0 0 0-8 8v4h-4v-4a8 8 0 1 0-8 8h6v42h8V32h6a8 8 0 0 0 0-16" fill="@{dark-blue}"/><path d="M30 46h4V32h-4z" fill="@{accent}"/><path d="M35 58h-6a1 1 0 0 1-1-1V47a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1" fill="@{accent}"/></g></svg>'
+        );
+        content: url("data:image/svg+xml, @{svg}") !important;
+      }
+    }
+
     // PRESS MATERIALS ICONS
     .content_root___2bzn.press_cards__rLmER article path {
       &[stroke="#aaa"] {
